feat: topics/k1ch/admin-post-personas-roles/ introduce API
