# server/src/api_endpoints/personas/roles.js
@@ -1,6 +1,6 @@
 const createError = require('http-errors')
 const dbAdminPersonaRoles = require('database/layer/admin-personarole')
-const { checkPersonaExists } = require('./utils')
+const { checkPersonaExists, checkPersonaRolesValidity } = require('./utils')
 
 const getPersonaRoles = async (req, res, next) => {
   try {
@@ -13,6 +13,24 @@ const getPersonaRoles = async (req, res, next) => {
   }
 }
 
+const createPersonaRoles = async (req, res, next) => {
+  try {
+    const { persona_key: personaKey } = req.params
+    const roleKeys = req.body
+    await Promise.all([
+      checkPersonaExists(personaKey),
+      checkPersonaRolesValidity(personaKey, roleKeys)
+    ])
+    await dbAdminPersonaRoles.insertPersonaRoles(personaKey, roleKeys)
+    const locationUrl = `${req.protocol}://${req.get('host')}${req.originalUrl}`
+    res.set('Location', locationUrl)
+    res.status(201).send()
+  } catch ({ httpStatusCode = 500, message }) {
+    return next(createError(httpStatusCode, { message }))
+  }
+}
+
 module.exports = {
   getPersonaRoles,
+  createPersonaRoles,
 }
