# server/the-usher-openapi-spec.yaml
@@ -585,6 +585,45 @@ paths:
           $ref: '#/components/responses/NotFound'
         500:
           $ref: '#/components/responses/InternalError'
+    post:
+      'x-swagger-router-controller': 'personas/roles'
+      operationId: createPersonaRoles
+      summary: Assigns roles to the subject persona
+      parameters:
+        - $ref: '#/components/parameters/personaKeyPathParam'
+      tags:
+        - Admin APIs
+      security:
+        - bearerAdminAuth: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: array
+              minItems: 1
+              items:
+                type: integer
+                minimum: 1
+              uniqueItems: true
+      responses:
+        201:
+          description: Successfully created roles for the subject persona
+          headers:
+            Location:
+              description: The URL to get all the persona roles
+              schema:
+                type: string
+        400:
+          $ref: '#/components/responses/BadRequest'
+        401:
+          $ref: '#/components/responses/Unauthorized'
+        404:
+          $ref: '#/components/responses/NotFound'
+        409:
+          $ref: '#/components/responses/Conflict'
+        500:
+          $ref: '#/components/responses/InternalError'
 
   /clients:
     post:
